Update and rename README.md to README.mdx

--- a/README.mdx
+++ b/README.mdx
@@ -4,6 +4,7 @@
   <img style="width:150px; border-radius:50%" src="./icons/icon.png" alt="WebGator" />
 </div>
 
+
 <p  style="align:left;">
 A simple Chrome extension that provides a floating navigation bar with **Back**, **Forward**, and **Reload** **Home** buttons. The navigation bar appears when the user's mouse hovers near the top of the page. It's a great tool to easily navigate between pages without having to use the browser's built-in navigation buttons.
 </p>
@@ -20,9 +21,16 @@ A simple Chrome extension that provides a floating navigation bar with **Back**,
 
 ### 1. Download the Extension Files
 Create a folder on your computer and save the following files inside the folder:
-- `manifest.json`
-- `content.js`
-- `style.css`
+
+* `WebGator/`
+  - `|__manifest.json`
+  - `|__content.js`
+  - `|__style.css`
+  - `|__icons/`
+    - `|__16.png`
+    - `|__32.png`
+    - `|__48.png`
+    - `|__icon.png`
 
 ### 2. Load the Extension into Chrome
 1. Open **Chrome** and go to `chrome://extensions/`.
